tests/ui/zerosized.stderr
error[E0080]: evaluation panicked: #[distributed_slice] requires that the slice element type has nonzero size
 --> tests/ui/zerosized.rs:7:1
  |
7 | #[distributed_slice]
  | ^^^^^^^^^^^^^^^^^^^^ evaluation of `ZEROSIZED` failed here
  |
  = note: this error originates in the attribute macro `distributed_slice` (in Nightly builds, run with -Z macro-backtrace for more info)
